fix. CSS layout issues for main element and spacing on site-nav.

--- a/layouts/style/base.css
+++ b/layouts/style/base.css
@@ -23,9 +23,10 @@ body {
 
 main {
     display: flex;
+    flex-direction: column;
+    flex-grow: 2;
     max-width: 800px;
     margin: 0 auto;
-    flex-grow: 2;
 }
 
 /*
@@ -99,7 +100,9 @@ main {
 .splash {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .splash p {
